tests/reference/asr-coarray_01-5f111e4.stderr
semantic error: Coarrays are not supported yet
 --> tests/errors/coarray_01.f90:4:5
  |
4 |     call co_sum (val, result_image=1)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
